fixed cover issue, just have white space under page

--- a/style.css
+++ b/style.css
@@ -8,13 +8,6 @@ body {
   line-height: 1.6rem;
 }
 
-.row-container{
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-  align-items: center;
-}
-
 h1{
   padding-top: 4.25rem;
   font-size: 3.61em;
@@ -32,11 +25,7 @@ a{
   color: white;
   text-decoration: none;
 }
-html, body, .viewport {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-}
+
 
 nav.top a{
   margin-left: 9px;
@@ -150,10 +139,6 @@ input[type=checkbox]{
   flex-flow: column;
 }
 
-.content{
-  height: 600px;
-}
-
 .gradient{
   background: linear-gradient(rgba(0,0,0,0) 10px, #3a1e4f 67%);
 }
@@ -217,8 +202,6 @@ input[type=checkbox]{
 }
 
 #footer li {
-  display: flex;
-  align-items: stretch;
   padding-left: 10px;
   padding-right: 10px;
 }
@@ -227,7 +210,6 @@ input[type=checkbox]{
 
   .content{
     border-bottom: none;
-    padding-bottom: 40px;
   }
 
   .bottom-section{
@@ -351,10 +333,4 @@ input[type=checkbox]{
     width: 240px;
   }
 
-}
-
-@media only screen and (min-width: 853px) {
-  .cover {
-    min-height: 100%;
-  }
 }
